# django-telescope

./: pyproject.toml  setup.py
example_project/: asgi.py  settings.py  urls.py
frontend/src/: App.vue
frontend/src/components/: AppHeader.vue  AppSidebar.vue  CodeBlock.vue  ConfirmDialog.vue  DurationBadge.vue  EntryTable.vue  KeyValueTable.vue  LiveIndicator.vue  SearchBar.vue  StackTrace.vue  StatusBadge.vue
frontend/src/composables/: useTimeAgo.ts
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/: DashboardPage.vue  ExceptionsPage.vue  QueriesPage.vue  RequestDetailPage.vue  RequestsPage.vue  TypedListPage.vue
src/telescope/: recorder.py  serializers.py
src/telescope/views/: api.py
src/telescope/watchers/: cache_watcher.py
