[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-scope"
version = "1.0.1"
description = "A real-time debugging and monitoring dashboard for Django — monitor requests, queries, cache, Redis, exceptions, and more."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "MythicalCosmic", email = "qodirjonov0854@gmail.com" }]
keywords = ["django", "debugging", "monitoring", "observability", "websocket", "scope", "dashboard", "profiling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 4",
    "Framework :: Django :: 5",
    "Framework :: Django :: 6",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: System :: Monitoring",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "django>=4.2",
    "channels>=4.0",
    "daphne>=4.2.1",
]

[project.urls]
Homepage = "https://github.com/MythicalCosmic/django-scope"
Documentation = "https://github.com/MythicalCosmic/django-scope/wiki"
Repository = "https://github.com/MythicalCosmic/django-scope"
"Bug Tracker" = "https://github.com/MythicalCosmic/django-scope/issues"

[project.optional-dependencies]
redis = ["redis>=4.0", "django-redis>=5.0"]
dev = [
    "pytest",
    "pytest-django",
    "pytest-asyncio",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/telescope"]

[tool.hatch.build.targets.sdist]
include = ["src/telescope/**", "LICENSE", "README.md"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["src", "."]

[tool.ruff]
src = ["src"]
line-length = 120

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-django>=4.12.0",
]
